--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="txt-topo-site">
                         <h1 class="h1-automatico1">SOU WENDDYL REIS</h1>
                         <h1 class="h1-automatico2"><span>DESENVOLVEDOR FRONT-END</span></h1>
-                        <p>Estou explorando soluções web e mobile com React, React Native, Node.js e
+                        <p class="p-sobre">Estou explorando soluções web e mobile com React, React Native, Node.js e
                             TypeScript.
                             Como entusiasta do Git e GitHub, estou sempre buscando maneiras de colaborar e aprender com
                             a comunidade. Também estou experimentando o Tailwind CSS e Bootstrap para criar interfaces
@@ -150,7 +150,7 @@
                     <div class="txt-sobre">
 
                         <h2 class="h2-automatico">OLÁ MUNDO, SAIBA <span class="sobre-mim-menor">MAIS SOBRE MIM</span></h2>
-                        <p>Me chamo Wenddyl Reis, tenho 28 anos,
+                        <p class="p-sobre">Me chamo Wenddyl Reis, tenho 28 anos,
                             resido em Santa Barbara d'Oeste - SP, sou apaixonado por tecnologia,
                             atualmente estou cursando a formação FullStack no DevClub, onde estou aprofundando meus
                             conhecimentos em HTML, CSS e JavaScript.
