--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                     <div class="txt-sobre">
 
                         <h2 class="h2-automatico">OLÁ MUNDO, SAIBA <span class="sobre-mim-menor">MAIS SOBRE MIM</span></h2>
-                        <p class="p-sobre">Me chamo Wenddyl Reis, tenho 28 anos,
-                            resido em Santa Barbara d'Oeste - SP, sou apaixonado por tecnologia,
+                        <p class="p-sobre">Meu nome é Wenddyl Reis, tenho 28 anos,
+                            resido em Santa Barbara d'Oeste - SP, e sou apaixonado por tecnologia,
                             atualmente estou cursando a formação FullStack no DevClub, onde estou aprofundando meus
                             conhecimentos em HTML, CSS e JavaScript.
                         </p>                       
