Commit de textos

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                         <p class="paragrafo-carrossel">Neste projeto, criei um site de carros com uma estética divertida
                             e inspirada no universo automobilístico.</br></br></br></br></br></p>
                         <div class="botao-github">
-                            <a href="https://jogo-da-forca-geral.netlify.app/" target="_blank"
+                            <a href="https://wenddylreiscarros.netlify.app" target="_blank"
                                 class="chamar"><button>Projeto</button></a>
-                            <a href="https://github.com/diemersonrfernandes/Jogo-Da-Forca" target="_blank"
+                            <a href="https://github.com/WenddylReis/cars" target="_blank"
                                 class="chamar"><button> GitHub <i class="fa-brands fa-github"></i> </button></a>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         <div class="botao-github">
                             <a href="https://wenddylreisflix.netlify.app" target="_blank"
                                 class="chamar"><button>Projeto</button></a>
-                            <a href="https://wenddylreisflix.netlify.app" target="_blank" class="chamar"><button> GitHub
+                            <a href="https://github.com/WenddylReis/Projeto-Netflix" target="_blank" class="chamar"><button> GitHub
                                     <i class="fa-brands fa-github"></i> </button></a>
                         </div>
                     </div>
